--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -40,6 +40,10 @@ group :development, :test do
   # Adds support for Capybara system testing and selenium driver
   gem 'capybara', '>= 2.15'
   gem 'selenium-webdriver'
+  gem 'cucumber'
+  gem 'cucumber-rails', require: false
+  gem 'database_cleaner'
+  gem 'rspec', '~> 3.7.0'
 end
 
 group :development do
